--- a/css/styles.css
+++ b/css/styles.css
@@ -474,3 +474,43 @@ img {
 .social-media-footer {
   padding: 12px 0 0 70px;
 }
+
+/*=============== Backdrop==============*/
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  min-height: 581px;
+  background-color: var(--background-white);
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--shadow-black-ten);
+  transition: transform 0.75s;
+}
+
+.close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: var(--background-white);
+  border: 1px solid var(--shadow-black-ten);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.is-hidden {
+  pointer-events: none;
+  transform: translateY(-100%);
+  opacity: 0;
+}
