--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
   --background-white: #ffffff;
   --background-grey: #f5f4fa;
   --background-dark: #2f303a;
+  --background-dark-eighty: #2f303acc;
   --backgroung-dark-transparent: #2f303a66;
   --font-normal: #757575;
   --font-dark: #212121;
@@ -98,10 +99,25 @@ img {
 .contact-footer:focus {
   color: var(--brand-blue);
 }
+
+.activ {
+  position: relative;
+}
+
 .link {
   color: var(--font-dark);
   text-decoration: none;
   font-weight: 500;
+}
+
+.activ:after {
+  content: "";
+  position: absolute;
+  bottom: -35px;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: var(--brand-blue);
 }
 
 .link:hover,
@@ -158,6 +174,13 @@ img {
   background-position: 50% 50%, 50% 50%;
   background-size: 1600px 600px, auto;
   color: var(--font-light);
+}
+
+.presentation-title {
+  width: 370px;
+  height: 70px;
+  background: linear-gradient var(--backgroung-dark-transparent),
+    var(--backgroung-dark-transparent);
 }
 
 .team {
@@ -221,6 +244,23 @@ img {
   text-align: center;
 }
 
+.thumb {
+  position: relative;
+}
+
+.thumb > .label {
+  position: absolute;
+  font-weight: 700;
+  line-height: 1.17;
+  text-align: center;
+  padding-top: 27px;
+  color: var(--font-light);
+  width: 370px;
+  height: 70px;
+  bottom: 0;
+  background-color: var(--background-dark-eighty);
+}
+
 .non-italic {
   font-style: normal;
 }
@@ -255,6 +295,12 @@ img {
 
 .navigation {
   display: flex;
+}
+
+*:hover,
+*:focus {
+  transition-duration: 2s;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .navigation-list {
@@ -494,7 +540,9 @@ img {
   width: 100%;
   height: 100%;
   background-color: var(--shadow-black-ten);
-  transition: transform 0.75s;
+  /* transition: transform 0.25s; */
+  opacity: 1;
+  transition: transform 2s, opacity 2s;
 }
 
 .close-btn {
