--- a/css/styles.css
+++ b/css/styles.css
@@ -570,7 +570,6 @@ img {
   width: 100%;
   height: 100%;
   background-color: var(--shadow-black-ten);
-  /* transition: transform 0.25s; */
   opacity: 1;
   transition: transform 0.25s, opacity 0.25s;
 }
@@ -592,4 +591,41 @@ img {
   transform: translateY(-100%);
   opacity: 0;
   visibility: inherit;
+}
+
+.text-in-box {
+  position: relative;
+  width: 370px;
+  height: 294px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #800f0f;
+
+  overflow: hidden;
+}
+
+.text-in-box:hover .overlay {
+  transform: translatey(0);
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--brand-blue);
+  transform: translatey(100%);
+  transition: transform 250ms ease;
+}
+
+.overlay-text {
+  font-style: normal;
+  font-family: "Roboto";
+  font-weight: 400;
+  padding: 49px;
+  margin: 0;
+  font-size: 18px;
+  line-height: 28px;
+  color: #ffffff;
 }
