--- a/css/styles.css
+++ b/css/styles.css
@@ -417,9 +417,15 @@ img {
   transition: box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item:hover {
+.portfolio-item:hover .overlay {
+   transform: translatey(0);
+  
+}
+
+.portfolio-item-all:hover {
   box-shadow: 0px 1px 1px var(--shadow-black-twelve),
-    0px 4px 4px var(--shadow-black-six), 1px 4px 6px var(--shadow-black-sixteen);
+   0px 4px 4px var(--shadow-black-six), 1px 4px 6px var(--shadow-black-sixteen);
+   cursor: pointer;
 }
 
 .footer-block {
@@ -597,7 +603,7 @@ img {
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  background-color: #800f0f;
+  background-color: #967171;
 
   overflow: hidden;
 }
@@ -614,7 +620,7 @@ img {
   height: 100%;
   background-color: var(--brand-blue);
   transform: translatey(100%);
-  transition: transform 250ms ease;
+  transition: transform 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overlay-text {
