--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,12 @@ img {
   text-decoration: none;
 }
 
+.icon-x {
+  display: inline-block;
+
+  fill: currentColor;
+}
+
 .contact {
   color: var(--font-normal);
   text-decoration: none;
@@ -418,14 +424,13 @@ img {
 }
 
 .portfolio-item:hover .overlay {
-   transform: translatey(0);
-  
+  transform: translatey(0);
 }
 
 .portfolio-item-all:hover {
   box-shadow: 0px 1px 1px var(--shadow-black-twelve),
-   0px 4px 4px var(--shadow-black-six), 1px 4px 6px var(--shadow-black-sixteen);
-   cursor: pointer;
+    0px 4px 4px var(--shadow-black-six), 1px 4px 6px var(--shadow-black-sixteen);
+  cursor: pointer;
 }
 
 .footer-block {
